noinst_PROGRAMS=tipc_c_api_client tipc_c_api_server tipc_c_api_link_subscr

tipc_c_api_client_SOURCES=tipc_c_api_client.c tipcc.c tipcc.h
tipc_c_api_server_SOURCES=tipc_c_api_server.c tipcc.c tipcc.h
tipc_c_api_link_subscr_SOURCES=tipc_c_api_link_subscr.c tipcc.c tipcc.h

dist_noinst_DATA=tipc_c_api_client.c tipcc.c tipc_c_api_server.c tipc_c_api_link_subscr.c
